--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <link rel="stylesheet" href="code.css"> 
 </head>
 <body>
- <div class="center"><h1> Welcome to my web site</h1><u>Web developement (lab1)</u></div>
+ <div class="center"><h1> Welcome to my web site</h1><u>Web developement </u></div>
  <div class="information">
-  <p><span>Full name :</span>Ammari Khawla</p>
-  <p><span>Age :</span>19 years old</p>
-  <p><span> Classe :</span>2<sup>nd</sup>Lmd Computer science</p>
-  <p><span> University :</span>Hamma Lakhder</p>
- 
- <img src="beautiful-travel-road.jpg" alt=""></div>
+     <div>
+   <p><span>Full name :</span>Ammari Khawla</p>
+   <p><span>Age :</span>19 years old</p>
+   <p><span> Classe :</span>2<sup>nd</sup>Lmd Computer science</p>
+   <p><span> University :</span>Hamma Lakhder</p>
+     </div>
+ <img src="beautiful-travel-road.jpg" alt="">
+ </div>
 </body>
 </html>
